<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registration_form"
            android:textSize="29sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcome_to_adventure_learning_club" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="_______________________________________________________________" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="5"
            android:inputType="textPersonName"
            android:layout_weight="2"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="5"
            android:inputType="textPersonName"
            android:text="@string/last_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <RadioButton
                android:id="@+id/Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/male"></RadioButton>

            <RadioButton
                android:id="@+id/Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/female"></RadioButton>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/StudentID"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/student_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id" />

        <EditText
            android:id="@+id/editTextStudent_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:inputType="textPersonName"
            android:text="" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school" />

        <EditText
            android:id="@+id/editTextSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>


</LinearLayout>